--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 body {
-  background-color: #F5F5F5;
+  background-color: #96B0A3;
 }
 
 #container {
-  background-color: #FFF;
+  width: 800px;
+  background-color: #F1E0BF;
   margin-top: 15px;
   padding: 45px;
   border: .4px solid #555;
@@ -11,9 +12,13 @@ body {
   box-shadow: 2px 4px 25px rgba(0, 0, 0, 0.5);
 }
 
+#buttonContainer {
+  width: 800px;
+}
+
 #footer {
+  width: 800px;
   margin-top: 2px;
-  margin-bottom: 50px;
   font-size: 10px;
 }
 
@@ -21,4 +26,88 @@ body {
   float: right;
   margin-right: 50px;
   opacity: .7;
+}
+
+.cbLabel {
+  font-size: 26px;
+  line-height: 1.2em;
+}
+
+
+.checkbox label:after,
+.radio label:after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+.checkbox .cr,
+.radio .cr {
+    position: relative;
+    display: inline-block;
+    border: 1px solid #a9a9a9;
+    border-radius: .25em;
+    width: 1.3em;
+    height: 1.3em;
+    float: left;
+    margin-right: .5em;
+}
+
+.radio .cr {
+    border-radius: 50%;
+}
+
+.checkbox .cr .cr-icon,
+.radio .cr .cr-icon {
+    position: absolute;
+    font-size: .8em;
+    line-height: 0;
+    top: 50%;
+    left: 20%;
+}
+
+.radio .cr .cr-icon {
+    margin-left: 0.04em;
+}
+
+.checkbox label input[type="checkbox"],
+.radio label input[type="radio"] {
+    display: none;
+}
+
+.checkbox label input[type="checkbox"] + .cr > .cr-icon,
+.radio label input[type="radio"] + .cr > .cr-icon {
+    transform: scale(3) rotateZ(-20deg);
+    opacity: 0;
+    transition: all .3s ease-in;
+}
+
+.checkbox label input[type="checkbox"]:checked + .cr > .cr-icon,
+.radio label input[type="radio"]:checked + .cr > .cr-icon {
+    transform: scale(1) rotateZ(0deg);
+    opacity: 1;
+}
+
+.checkbox label input[type="checkbox"]:disabled + .cr,
+.radio label input[type="radio"]:disabled + .cr {
+    opacity: .5;
+}
+
+.tasto { display: inline-block; border:0; border-radius:3px; padding: 0px 10px; text-decoration:none; background-color: #F1E0BF; border-bottom: 2px solid #CBBEA3; color: #D5654C; min-height:15px; min-width:17px; text-align:center; -webkit-appearance: none;font-family: 'Bigelow Rules', cursive; position:relative; }
+.tasto i { font-size:2.25em; color: #92AB9E; margin-right: 10px;}
+.tasto.tasto_piccolo i { font-size:1.75em;}
+.tasto .text {  display: inline-block; font-size: 1.875em; line-height: 1.665em;}
+.tasto:hover , .tasto.hover{ box-shadow:0 2px 2px rgba(0,0,0,0.3); }
+.tasto:active { box-shadow:none !important; }
+
+.cont_tasto { display: inline-block; background:#8AA296; border-radius: 3px;}
+.cont_tasto .tasto { margin: 10px;}
+.cont_zipButton { border-radius: 5px;}
+.tasto#zipButton { padding: 10px 20px;  text-transform: none; position:relative;}
+.tasto#zipButton .text {  font-size: 3.125em; line-height: 1em; }
+.tasto#zipButton:hover { color: #F1E0BF; background-color: #D5654C; border-bottom-color: #A03F2E;}
+.tasto#zipButton:hover i { color: #4B291A;}
+
+.russian {
+  font-family: 'Russo One';
 }
