--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color: #96B0A3;
+  color: #333;
 }
 #logo {
   position: absolute;
@@ -218,6 +219,28 @@ button {
     cursor: pointer;
 }
 
+input.form-control {
+  -webkit-box-shadow: inset 0 -1px 0 #aaa !important;
+  box-shadow: inset 0 -1px 0 #aaa !important;
+}
+
+input.form-control:focus {
+  -webkit-box-shadow: inset 0 -2px 0 #999 !important;
+  box-shadow: inset 0 -2px 0 #999 !important;
+  font-weight: bolder !important;
+}
+
+#checkboxes {
+  background-color: rgba(0,0,0,.02);
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  padding: 15px;
+}
+
+.checkbox {padding-bottom: 10px;}
+.cr {
+  background-color:#eee;
+}
 /* Add Animation */
 @-webkit-keyframes animatetop {
     from {top: -300px; opacity: 0}
